--- a/01_work/style.css
+++ b/01_work/style.css
@@ -6,8 +6,15 @@ html{
     transition: .3s ease;
 }
 body{
+    overflow-x: hidden;
     font-weight: 400;
     margin: 0;
+
+    height: fit-content;
+    background-image: url(../00_assets/svgs/temp.svg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 a, li{
     all: unset;
@@ -15,7 +22,7 @@ a, li{
 }
 ::selection {
     color: white;
-    background: rgb(247,75,91);
+    background: #C33948;
 }
 
 /*NAVBAR*/
@@ -27,7 +34,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    background-color: rgb(247,75,91);
+    background-color: #c33949fa;
     color: white;
 }
 #me_index{
@@ -70,7 +77,7 @@ nav{
     z-index: -1;
     padding-top: 200px;
     display: none;
-    background-color: rgb(247,75,91);
+    background-color: #C33948;
 }
 .mobNav a{
     width: 30vh;
@@ -78,6 +85,7 @@ nav{
     border: solid 2px;
     transition: .3s ease;
     background-color: white;
+    border-radius: 12px;
 }
 
 /* nav animations */
@@ -126,7 +134,7 @@ nav{
 /* NAVBAR */
 
 .intro{
-    height: 100vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,11 +148,11 @@ nav{
     background-size: cover;
     background-repeat: no-repeat;
     transition: .3s ease;
-    text-align: left;
-    background-color: #ffe1e1;
+    background-color: rgb(253, 231, 231);
+
 }
 .whoDat:hover{
-    background-color: white;
+    background-color: #ffe1e1;
 }
 .datWho{
     text-align: center;
@@ -158,12 +166,19 @@ nav{
     align-items: flex-end;
     justify-content: center;
 }
+#jz{
+    font-family: "Marcellus SC", serif;
+    font-size: 4em;
+    margin: 0px;
+}
 #meet h1, #followUp{
     font-weight: 500;
 }
 #more{
     align-items: start;
-    line-height: 200%;
+    line-height: 150%;
+    font-size: 1.5em;
+    font-weight: 300;
 }
 .whoImg{
     width: 50%; 
@@ -182,18 +197,36 @@ nav{
     transform: scale(105%);
 }
 
-.break{
+
+#joy{
     display: flex;
-    justify-content: center;
     width: 100%;
-    align-items: center;
-    background-color: rgb(247,75,91);
-    height: 5vh;
+    background: linear-gradient(to right,#9198e500 40%,#C33948 80%);
+    position: absolute;
+    justify-content: end;
+    padding: .5% 1.5%;
+    bottom: 20vh;
+    right: 0;
+    z-index: 99;
+}
+#info{
+    padding-right: .5%;
+    transition: .3s ease;
+    cursor: pointer;
+    transition: .3s ease;
+}
+#info:hover{
+    filter: brightness(0) saturate(100%) invert(96%) sepia(4%) saturate(0%) hue-rotate(355deg) brightness(104%) contrast(105%);
+}
+#joyce{
     color: white;
+    font-weight: 300;
+    align-self: center;
 }
-.break a:hover{
+#joyce a:hover{
     text-decoration: underline;
-}
+} 
+
 #blank, .break small{
     width: 50%;
 }
@@ -202,8 +235,55 @@ nav{
     text-align: center;
 }
 
+/* case studies */
+.caseStudies{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15%;
+    padding-bottom: 10%;
+}
+.caseStudies h1{
+    /* font-family: "Marcellus SC", serif; */
+    font-family: "work sans", serif;
+    font-size: 2em;
+    font-weight: 400;
+    text-align: center;
+}
+.case{
+    text-align: center;
+    padding-bottom: 10%;
+    transition: .3s ease;
+}
+.caseCover{
+    width: 100%;
+    cursor: pointer;
+}
+.caseCover:hover{
+    transform: scale(102%);
+}
+
+footer{
+    width: auto;
+    background-color: #C33948;
+    color: white;
+    font-weight: 200;
+    height: fit-content;
+    padding-top: 2%;
+    padding-left: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#foot img{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
+}
+#cr{
+    text-align: right;
+    padding-right: 2%;
+}
 /* socials */
-.social{
+/* .social{
     height: 90vh;
     display: flex;
     flex-direction: column;
@@ -216,17 +296,17 @@ nav{
 }
 span{
     user-select: none;
-}
+} */
 #followUp{
-    margin-top: 10%;
-    border-right: solid 2px;
-    text-align: center;
+    text-align: left;
     animation: type 1s infinite;
+    border-right: white solid 2px;
 }
 .follow{
-    width: 100%;
+    padding-top: 1%;
+    width: 20%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 .follow a{
     transition: .3s ease;
@@ -235,7 +315,7 @@ span{
     transform: scale(110%);
 }
 .follow img{
-    width: 10em;
+    width: 2em;
 }
 #up1{
     animation: t1 5s infinite ease-in-out;
@@ -245,9 +325,9 @@ span{
 }
 #up3{
     animation: t3 5s infinite ease-in-out;
-}
+} 
 /* Footer */
-footer{
+/* footer{
     text-align: center;
     padding-top: .5%;
     padding-bottom: .5%;
@@ -256,6 +336,18 @@ footer{
     border-top: solid 2px;
 }
 /* animations */
+@keyframes in{
+    from {transform:translateX(250px);}
+    to {}
+}
+@keyframes jout{
+    from {}
+    to {opacity: 0%; transform:translateX(250px);}
+}
+@keyframes out{
+    from {}
+    to {transform:translateX(250px);}
+}
 @keyframes type{
     from {}
     50% {border-color: rgba(0,0,0,0);}
@@ -285,18 +377,22 @@ footer{
 
 /* responsive design */
 @media screen and (max-width: 1270px){
-    #meet{
-        height: 40%;
-    }
     #more{
-        height: 60%;
         text-align: center;
     }
+    
 }
 @media screen and (max-width:858px){
     .intro{
         flex-direction: column;
-        height: 200vh;
+        height: 140vh;
+    }
+    #joy{
+        bottom: -40vh;
+        background: linear-gradient(to right,#9198e500,#C33948 50%);
+    }
+    #jz{
+        font-size: 2.6em;
     }
     .whoImg, .whoDat{
         width: 100%;
@@ -304,7 +400,6 @@ footer{
     }
     .whoDat{
         padding: 0px;
-        padding-top: 5%;
         background-image: url(../00_assets/svgs/wframe.svg);
     }
     .whoImg{
@@ -314,12 +409,13 @@ footer{
         margin-left: 5%;
         margin-right: 5%;
     }
-    
-    .follow img{
-        width: 8em;
+    .caseStudies{
+        padding: 5%;
+        padding-top: 10%;
+        padding-bottom: 0%;
     }
-    #blank{
-        width: 0%;
+    #cr{
+        text-align: center;
     }
 }
 @media screen and (max-width: 600px){
@@ -327,23 +423,28 @@ footer{
         height: 30%;
     }
     .follow{
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        height: 75%;
+        width: 30%;
     }
     .whoDat{
+        padding-top: 20%;
         background-image: url(../00_assets/svgs/mframe.svg);
+        background-size: cover;
+        height: 50vh;
     }
 }
 @media screen and (max-width: 425px){
+    .whoDat{
+        height: 100vh;
+    }
     #meet{
-        height: 25%;
+        height: 35%;
     }
     #followUp{
         margin-top: 5%;
+       
     }
-    .follow img{
-        width: 6.5em;
+    .follow{
+        width: 40%;
     }
+
 }
